modified the product data

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
       }
       .fade-in-up {
-        animation: fadeInUp .4s ease-out forwards;
+        animation: fadeInUp 0.4s ease-out forwards;
       }
       @keyframes fadeInScale {
         from {
@@ -77,7 +77,7 @@
         }
       }
       .fade-in-scale {
-        animation: fadeInScale .4s ease-out forwards;
+        animation: fadeInScale 0.4s ease-out forwards;
       }
     </style>
   </head>
@@ -288,171 +288,171 @@
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.3</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Carrots 500g</h2>
+                    <p class="text-xs">$12.99</p>
                   </div>
                 </div>
                 <!-- card 2 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.7</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Tomatoes 1KG</h2>
+                    <p class="text-xs">$15.49</p>
                   </div>
                 </div>
-                <!-- card 1 -->
+                <!-- card 3 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.2</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Lettuce 300g</h2>
+                    <p class="text-xs">$9.99</p>
                   </div>
                 </div>
-                <!-- card 2 -->
+                <!-- card 4 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.8</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Broccoli 1KG</h2>
+                    <p class="text-xs">$14.99</p>
                   </div>
                 </div>
-                <!-- card 1 -->
+                <!-- card 5 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
                         >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Pepper 500g</h2>
+                    <p class="text-xs">$11.50</p>
                   </div>
                 </div>
-                <!-- card 2 -->
+                <!-- card 6 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.6</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Corn 2pcs</h2>
+                    <p class="text-xs">$8.75</p>
                   </div>
                 </div>
-                <!-- card 1 -->
+                <!-- card 7 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.1</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Cucumber 1pc</h2>
+                    <p class="text-xs">$5.99</p>
                   </div>
                 </div>
-                <!-- card 2 -->
+                <!-- card 8 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.9</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Spinach 250g</h2>
+                    <p class="text-xs">$7.80</p>
                   </div>
                 </div>
-                <!-- card 2 -->
+                <!-- card 9 -->
                 <div
                   class="card flex-row bg-white rounded-lg p-3 gap-3 items-center hidden lg:flex"
                 >
-                  <figure class="">
+                  <figure>
                     <div class="p-2 bg-secondary rounded">
                       <img src="c2-assets/service.png" class="w-14 h-14" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
-                    <i class="fa-solid fa-star text-[#FFC107] flex-grow"
-                      ><span class="text-black pl-1 text-xs font-light"
-                        >4.5</span
-                      ></i
-                    >
-                    <h2 class="card-title text-sm flex-grow">Onion 1 KG</h2>
-                    <p class="text-xs">$39.99</p>
+                    <i class="fa-solid fa-star text-[#FFC107] flex-grow">
+                      <span class="text-black pl-1 text-xs font-light"
+                        >4.4</span
+                      >
+                    </i>
+                    <h2 class="card-title text-sm flex-grow">Mushrooms 300g</h2>
+                    <p class="text-xs">$10.20</p>
                   </div>
                 </div>
               </div>
@@ -461,65 +461,74 @@
         </div>
       </section>
 
-<!-- FAQ Section -->
-<section class="mb-8 max-w-[1280px]">
-  <h2 class="lg:text-3xl text-2xl font-bold text-left ml-5 mt-16 lg:mt-16 lg:mb-5 text-primary">
-    Frequently Asked Questions
-  </h2>
-  <div class="hero">
-    <div class="hero-content flex-col lg:flex-row">
-      <!-- Accordion -->
-      <div class="space-y-5">
-        <div class="collapse collapse-arrow border">
-          <input type="radio" name="my-accordion-2" checked="checked" />
-          <div class="collapse-title text-xl font-medium">
-            What types of vegetables do you sell?
-          </div>
-          <div class="collapse-content">
-            <p>
-              We offer a wide variety of fresh vegetables, including leafy greens, root vegetables, seasonal produce, and exotic options to meet all your cooking needs.
-            </p>
+      <!-- FAQ Section -->
+      <section class="mb-8 max-w-[1280px]">
+        <h2
+          class="lg:text-3xl text-2xl font-bold text-left ml-5 mt-16 lg:mt-16 lg:mb-5 text-primary"
+        >
+          Frequently Asked Questions
+        </h2>
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row">
+            <!-- Accordion -->
+            <div class="space-y-5">
+              <div class="collapse collapse-arrow border">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What types of vegetables do you sell?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    We offer a wide variety of fresh vegetables, including leafy
+                    greens, root vegetables, seasonal produce, and exotic
+                    options to meet all your cooking needs.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  How do you ensure the freshness of your vegetables?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Our vegetables are sourced daily from trusted local farms
+                    and suppliers, ensuring they reach your kitchen at peak
+                    freshness.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  Do you offer same-day delivery?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Yes, we provide same-day delivery for orders placed before
+                    the cut-off time to ensure you get fresh produce when you
+                    need it.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow border">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  Can I return vegetables if I am not satisfied?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Absolutely! If any product doesn’t meet your expectations,
+                    contact us within 24 hours for a hassle-free refund or
+                    replacement.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="collapse collapse-arrow border">
-          <input type="radio" name="my-accordion-2" />
-          <div class="collapse-title text-xl font-medium">
-            How do you ensure the freshness of your vegetables?
-          </div>
-          <div class="collapse-content">
-            <p>
-              Our vegetables are sourced daily from trusted local farms and suppliers, ensuring they reach your kitchen at peak freshness.
-            </p>
-          </div>
-        </div>
-        <div class="collapse collapse-arrow border">
-          <input type="radio" name="my-accordion-2" />
-          <div class="collapse-title text-xl font-medium">
-            Do you offer same-day delivery?
-          </div>
-          <div class="collapse-content">
-            <p>
-              Yes, we provide same-day delivery for orders placed before the cut-off time to ensure you get fresh produce when you need it.
-            </p>
-          </div>
-        </div>
-        <div class="collapse collapse-arrow border">
-          <input type="radio" name="my-accordion-2" />
-          <div class="collapse-title text-xl font-medium">
-            Can I return vegetables if I am not satisfied?
-          </div>
-          <div class="collapse-content">
-            <p>
-              Absolutely! If any product doesn’t meet your expectations, contact us within 24 hours for a hassle-free refund or replacement.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+      </section>
 
-      
       <!-- offer section -->
       <section class="max-w-full py-10 lg:py-16">
         <div class="hero">
