--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
       .special-bg {
         background: linear-gradient(135deg, #53db3a 0%, white 100%);
       }
+      .card-img{
+        width: 50px !important;
+        height: 50px !important;
+        object-fit: cover;
+      }
       @keyframes fadeInUp {
         from {
           opacity: 0;
@@ -290,7 +295,10 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img
+                        src="c2-assets/service.png"
+                        class="card-img"
+                      />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -309,7 +317,10 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img
+                        src="c2-assets/service.png"
+                        class="card-img"
+                      />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -328,7 +339,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -347,7 +358,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -366,7 +377,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -385,7 +396,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -404,7 +415,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -423,7 +434,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
@@ -442,7 +453,7 @@
                 >
                   <figure>
                     <div class="p-2 bg-secondary rounded">
-                      <img src="c2-assets/service.png" class="w-14 h-14" />
+                      <img src="c2-assets/service.png" class="card-img" />
                     </div>
                   </figure>
                   <div class="flex flex-col items-start text-left h-full">
